#page overflow:hidden - prevent weird vertical scrollbars on long custommenus

--- a/zebra/style/pagelayout.css
+++ b/zebra/style/pagelayout.css
@@ -22,7 +22,7 @@
  */
 
 /* All Columns */
-#page {margin:0 auto;max-width:[[setting:threecolmax]];overflow-x:hidden;}
+#page {margin:0 auto;max-width:[[setting:threecolmax]];overflow:hidden;}
 #page-header,
 #custommenu,
 .navbar,
